<resources>
    <string name="app_name">Schedule Check</string>
    <string name="title_label">Timetable</string>
    <string name="sub1_label">Schedule Check</string>
    <string name="sub2_label">Schedule Check</string>
    <string name="sub3_label">Schedule Check</string>
    <string name="sub4_label">Schedule Check</string>
    <string name="sub5_label">Schedule Check</string>
    <string name="sub6_label">Schedule Check</string>
    <string name="sub7_label">Schedule Check</string>
    <string name="subt1_label">8:50 – 9:50</string>
    <string name="subt2_label">9:50 – 10:50</string>
    <string name="subt3_label">11:00 – 12:00</string>
    <string name="subt4_label">12:00 – 1:00</string>
    <string name="subt5_label">1:00 – 2:00</string>
    <string name="subt6_label">2:00 – 3:00</string>
    <string name="subt7_label">3:00 – 4:50</string>
    <string name="subt8_label">4:00 – 5:00</string>
</resources>
